<resources>
    <string name="app_name">VJTI Canteen</string>
    <string name="menu" />
    <string name="descriptions" />
    <string name="price" />
    <string name="items" />
    <string name="Menu">Menu</string>
    <string name="go_to_order">GO TO ORDER</string>
    <string name="add">ADD</string>
    <string name="todo">TODO</string>
    <string name="about_us" />
    <string name="welcome">welcome</string>
    <string name="menu1">menu1</string>
    <string name="button">button</string>
    <string name="your_order">your order</string>
    <string name="place_order">place order</string>
    <string name="ITEM">ITEM</string>
    <string name="order_placed">ORDER PLACED</string>
    <string name="YOUR">YOUR ORDER</string>
    <string name="total_amount">TOTAL AMOUNT :</string>
    <string name="textview">TextView</string>
    <string name="sms_will_be_sent_to_place_order">sms will be sent to place order</string>
    <string name="WELCOME">WELCOME</string>
    <string name="credits">Credits</string>
    <string name="MENU">Menu</string>
</resources>
